--- a/index.html
+++ b/index.html
@@ -10,17 +10,15 @@
   <table cellspacing="20">
     <tr>
     <td><img src="Celine Moret picture.png" alt="Celine Moret website picture" width="180"></td>
-<td><h1>Celine Moret</h1>
-    <p><em>Digital Marketing Manager</em>, <b>SF Bay Area </b></p>
-  <p><a href="https://www.linkedin.com/in/celinemoret">LinkedIn Profile</a></p>
-  <p>I am a Marketing Manager with over 8 years of experience in marketing, media, cloud and telecoms sectors. Bilingual French-English speaker.
-  </em></p>
+   <td><h1>Celine Moret <a href="https://www.linkedin.com/in/celinemoret"><img src="LinkedIn_logo.png" width="30"/></a></h1>
+    <p><b>Digital Marketing Manager, San Francisco Bay Area (94133, CA)</b></p>
+  <p>I am a Marketing Manager with over 8 years of experience in marketing, media, cloud and telecoms sectors. Bilingual French-English speaker.</p>
 </td>
     </tr>
   </table>
   <hr>
 
-  <h3>Work Experience</h3>
+<h3>Work Experience</h3>
 
 <table cellspacing="10">
   <thead>
@@ -36,32 +34,27 @@
   </thead>
   <tr>
     <td>10/2019-04/2020</td>
-    <td>Digital Marketing Consultant</td>
+    <td>Digital Marketing Consultant, French American Chamber of Commerce San Francisco - San Francisco, CA, USA.</td>
   </tr>
 
   <tr>
     <td>10/2015-10/2019</td>
-    <td>Marketing Communications Manager</td>
+    <td>Marketing Communications Manager, Orange Business Services - Paris area, France.</td>
   </tr>
 
   <tr>
     <td>09/2014-09/2015</td>
-    <td>Marketing Communications Specialist</td>
+    <td>Marketing Communications Specialist, Orange Business Services - Paris area, France.</td>
   </tr>
 
   <tr>
     <td>09/2013-09/2012</td>
-    <td>Digital Marketing Specialist</td>
+    <td>Digital Marketing Specialist, M6 - Paris area, France.</td>
   </tr>
 
 </table>
 
-  <ul>
-    <li>French American Chamber of Commerce San Francisco - San Francisco, CA, USA.</li>
-    <li>Orange Business Services - Paris area, France.</li>
-    <li>Orange Business Services - Paris area, France.</li>
-    <li>M6 - Paris area, France.</li>
-  </ul>
+
 <hr>
   <h3>Education</h3>
   <ol>
