--- a/index.html
+++ b/index.html
@@ -57,10 +57,48 @@
 
 <hr>
   <h3>Education</h3>
-  <ol>
+  <h3>Work Experience</h3>
+
+<table cellspacing="10">
+  <thead>
+    <tr>
+      <th>Dates</th>
+      <th>Work</th>
+    </tr>
+    <tbody>
+      <tfoot>
+
+      </tfoot>
+    </tbody>
+  </thead>
+  <tr>
+    <td>10/2019-04/2020</td>
+    <td>Digital Marketing Consultant, French American Chamber of Commerce San Francisco - San Francisco, CA, USA.</td>
+  </tr>
+
+  <tr>
+    <td>10/2015-10/2019</td>
+    <td>Marketing Communications Manager, Orange Business Services - Paris area, France.</td>
+  </tr>
+
+  <tr>
+    <td>09/2014-09/2015</td>
+    <td>Marketing Communications Specialist, Orange Business Services - Paris area, France.</td>
+  </tr>
+
+  <tr>
+    <td>09/2013-09/2012</td>
+    <td>Digital Marketing Specialist, M6 - Paris area, France.</td>
+  </tr>
+
+</table>
+
+<hr>
+  <h3>Education</h3>
+  <ul>
     <li>Master Degree in Marketing and Communications, La Sorbonne University - Paris, France.</li>
     <li>Bachelor Degree in Management, La Sorbonne University - Paris, France.</li>
-  </ol>
+  </ul>
 <hr>
 
   <h3>Skills</h3>
@@ -95,7 +133,7 @@
       </tr>
       <tr>
         <td>SEO/SEM</td>
-      <td>⭐⭐⭐</td>
+      <td>⭐⭐⭐⭐</td>
       </tr>
       <tr>
         <td>MS Office</td>
@@ -105,7 +143,19 @@
   </td>
   <td>
     <table>
-  <tr>
+      <tr>
+        <td>Wordpress</td>
+      <td>⭐⭐⭐⭐</td>
+      </tr>
+        <tr>
+      <td>Web analytics</td>
+    <td>⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+      <td>Photoshop, Canva</td>
+      <td>⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
   <td>HTML</td>
   <td>⭐⭐⭐</td>
 </tr>
@@ -116,14 +166,7 @@
   <tr>
     <td>PHP</td>
   <td>⭐⭐⭐</td>
-  <tr>
-    <td>Wordpress</td>
-  <td>⭐⭐⭐⭐</td>
-  </tr>
-    <tr>
-  <td>Web analytics</td>
-<td>⭐⭐⭐⭐</td>
-  </tr>
+
   <tr>
 <td>Scrum</td>
 <td>⭐⭐⭐</td>
@@ -132,13 +175,11 @@
 <td>Project Management</td>
 <td>⭐⭐⭐</td>
 </tr>
-<tr>
-<td>Photoshop, Canva</td>
-<td>⭐⭐⭐⭐</td>
-</tr>
+
 </table>
   </td>
     </table>
+
 
     <hr>
     <a href="hobbies.html">My Hobbies</a>
